Fix checkbox wrapping on small screens

--- a/trackit/src/app/entry/entry-dialog/entry-dialog.component.css
+++ b/trackit/src/app/entry/entry-dialog/entry-dialog.component.css
@@ -15,5 +15,6 @@ mat-dialog-content {
 }
 
 .add-another {
-  margin-right: 2em;
+  margin-right: auto;
+  padding-right: 2em;
 }
